--- a/templates/sass/components/_participant-item.scss
+++ b/templates/sass/components/_participant-item.scss
@@ -2,9 +2,13 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-bottom: 2rem;
+
+  &:not(:last-of-type) {
+    margin-bottom: 2rem;
+  }
 
   &__profile-picture {
+    position: relative;
     z-index: 10;
     object-fit: cover;
     border-radius: 50%;
